--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.7.12",
+    "compass": "^0.1.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.1",
     "gulp-cssnano": "^2.1.0",
+    "gulp-html-partial": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-sass": "^3.0.0",
