--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^3.0.4",
     "run-sequence": "^1.1.2"
+  },
+  "dependencies": {
+    "jquery-form-validator": "^2.3.79",
+    "jquery-validation": "^1.19.0",
+    "normalize.css": "^8.0.1"
   }
 }
