--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "run-sequence": "^1.1.2"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.3.0",
     "jquery-form-validator": "^2.3.79",
     "jquery-validation": "^1.19.0",
     "normalize.css": "^8.0.1"
